smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-before-docs.smithy
// Parse error at line 4, column 1 near `deprecated`: Traits cannot be applied to `/// Baz`
namespace smithy.example

@deprecated
/// Baz
string MyString
